tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__haskell_multi_line_comment.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
{- A multi-line comment
   describing the function below -}
factorial :: Integer -> Integer
factorial 0 = 1
factorial n = n * factorial (n - 1)

# text_to_type
factorial :: Integer -> Integer
factorial 0 = 1
factorial n = n * factorial (n - 1)

# text_to_display
{- A multi-line comment
   describing the function below -}
factorial :: Integer -> Integer↵
factorial 0 = 1↵
factorial n = n * factorial (n - 1)↵
