tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__java_class_with_comments.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
public class Calculator {
    private int result = 0; // Initialize result
    
    public Calculator add(int value) { // Add method
        this.result += value;
        return this;
    }
}

# text_to_type
public class Calculator {
private int result = 0;
public Calculator add(int value) {
this.result += value;
return this;
}
}

# text_to_display
public class Calculator {↵
    private int result = 0;↵ // Initialize result
    
    public Calculator add(int value) {↵ // Add method
        this.result += value;↵
        return this;↵
    }↵
}↵
