tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__java_generic_class.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
public class Container<T> {
    private T item; // The contained item
    
    public void setItem(T item) {
        this.item = item; // Store the item
    }
    
    public T getItem() {
        return item; // Return the item
    }
}

# text_to_type
public class Container<T> {
private T item; // The contained item
public void setItem(T item) {
this.item = item; // Store the item
}
public T getItem() {
return item; // Return the item
}
}

# text_to_display
public class Container<T> {↵
    private T item; // The contained item↵
    
    public void setItem(T item) {↵
        this.item = item; // Store the item↵
    }↵
    
    public T getItem() {↵
        return item; // Return the item↵
    }↵
}↵
