tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__java_interface_with_comments.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
public interface Drawable {
    // Draw the object
    void draw();
    
    // Get the area
    double getArea();
}

# text_to_type
public interface Drawable {
// Draw the object
void draw();
// Get the area
double getArea();
}

# text_to_display
public interface Drawable {↵
    // Draw the object↵
    void draw();↵
    
    // Get the area↵
    double getArea();↵
}↵
