tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__javascript_arrow_function.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
const multiply = (a, b) => {
    // Simple multiplication
    return a * b;
};

# text_to_type
const multiply = (a, b) => {
// Simple multiplication
return a * b;
};

# text_to_display
const multiply = (a, b) => {↵
    // Simple multiplication↵
    return a * b;↵
};↵
