tests/integration/languages/snapshots/r#mod__integration__languages__typing_core_common__javascript_async_function.snap
---
source: tests/integration/languages/typing_core_common.rs
expression: snapshot
---
# text_original
async function fetchData(url) {
    try {
        const response = await fetch(url); // Fetch data
        return response.json();
    } catch (error) {
        console.error(error); // Log error
    }
}

# text_to_type
async function fetchData(url) {
try {
const response = await fetch(url); // Fetch data
return response.json();
} catch (error) {
console.error(error); // Log error
}
}

# text_to_display
async function fetchData(url) {↵
    try {↵
        const response = await fetch(url); // Fetch data↵
        return response.json();↵
    } catch (error) {↵
        console.error(error); // Log error↵
    }↵
}↵
